RESOLVED FIXED187135
[LFC] The margin bottom of the document element does not collapse with its last inflow child's bottom margin.
https://bugs.webkit.org/show_bug.cgi?id=187135
Summary [LFC] The margin bottom of the document element does not collapse with its la...
alan
Reported 2018-06-27 22:13:50 PDT
ssia.
Attachments
Patch (5.61 KB, patch)
2018-06-27 22:15 PDT, alan
koivisto: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews104 for mac-sierra-wk2 (3.07 MB, application/zip)
2018-06-27 23:40 PDT, EWS Watchlist
no flags
alan
Comment 1 2018-06-27 22:15:24 PDT
EWS Watchlist
Comment 2 2018-06-27 23:40:48 PDT
Comment on attachment 343793 [details] Patch Attachment 343793 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/8367064 New failing tests: http/tests/security/javascriptURL/xss-ALLOWED-from-javascript-url-window-open.html
EWS Watchlist
Comment 3 2018-06-27 23:40:50 PDT
Created attachment 343798 [details] Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
alan
Comment 4 2018-06-28 07:35:24 PDT
Radar WebKit Bug Importer
Comment 5 2018-06-28 07:40:28 PDT
Note You need to log in before you can comment on or make changes to this bug.