[LFC] The margin bottom of the document element does not collapse with its last inflow child's bottom margin. https://bugs.webkit.org/show_bug.cgi?id=187135

Reviewed by Antti Koivisto.

* layout/blockformatting/BlockFormattingContext.h:
* layout/blockformatting/BlockFormattingContextGeometry.cpp:
(WebCore::Layout::BlockFormattingContext::Geometry::inFlowNonReplacedHeightAndMargin):
* layout/blockformatting/BlockMarginCollapse.cpp:
(WebCore::Layout::BlockFormattingContext::MarginCollapse::marginBottom):
(WebCore::Layout::BlockFormattingContext::MarginCollapse::isMarginBottomCollapsedWithParent):
(WebCore::Layout::BlockFormattingContext::MarginCollapse::collapsedMarginBottomFromLastChild):

Canonical link: https://commits.webkit.org/202391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233304 268f45cc-cd09-0410-ab3c-d52691b4dbfc